# dm-user-registration

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: init_db.sql  rabbitmq_consumer.py
src/app/: config.py  container.py  main.py
src/app/application/: exceptions.py
src/app/application/dto/: user_dto.py
src/app/application/ports/: code_store.py  event_publisher.py  unit_of_work.py  user_repository.py
src/app/application/use_cases/: activate_user.py  register_user.py  resend_code.py
src/app/domain/: __init__.py  exceptions.py
src/app/domain/entities/: user.py
src/app/domain/events/: base.py  user_events.py
src/app/domain/value_objects/: email.py  password.py  user_id.py  verification_code.py
src/app/infrastructure/code_store/: memory_code_store.py  redis_code_store.py
src/app/infrastructure/database/: postgres_unit_of_work.py
src/app/infrastructure/database/mappers/: user_mapper.py
src/app/infrastructure/database/models/: user_model.py
src/app/infrastructure/database/repositories/: postgres_user_repository.py
src/app/infrastructure/event_publisher/: console_event_publisher.py  rabbitmq_event_publisher.py
src/app/presentation/: dependencies.py  exception_handlers.py
src/app/presentation/schemas/: users.py
tests/application/use_cases/: conftest.py  test_register_user.py  test_resend_code.py
tests/fakes/: fake_event_publisher.py  fake_user_repository.py
tests/integration/: conftest.py  test_v1_users.py
tests/unit/application/use_cases/: conftest.py  test_activate_user.py  test_register_user.py  test_resend_code.py
tests/unit/domain/entities/: conftest.py  test_user.py
tests/unit/domain/value_objects/: test_email.py  test_password.py  test_user_id.py  test_verification_code.py
tests/unit/fakes/: fake_code_store.py  fake_unit_of_work.py
(+2 files in other folders)
