[project]
name = "dm-user-registration"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[all]>=0.124.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
    "ty>=0.0.1a33",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",   # print found # ! not used in prod
    "D",      # pydocstyle
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "ANN",    # flake8-annotations
    "PTH123", # pathlib-open - this would force pathlib usage anytime open or with open was used.
    "FA102",  # Missing `from __future__ import annotations`, but uses PEP 604 union.
    "ERA001", # Found commented-out code
    "TD",     # flake8-todo
    "FIX002", # Line contains TODO, consider resolving the issue
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]
[tool.ruff.lint.per-file-ignores]
"tests*/**/*.py" = [
    "S101", # asserts allowed in tests...
]
"tools/**/*.py" = ["ALL"]
"migrations/**/*.py" = ["ALL"]
"_local_test/**/*.py" = ["ALL"]
[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
[tool.ruff.lint.pylint]
max-args = 8
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
